# lib/scroll_web/controllers/post_controller.ex
@@ -1,13 +1,14 @@
 defmodule ScrollWeb.PostController do
   @moduledoc false
+  alias PhoenixSwagger.JsonApi
   alias Scroll.Posts
 
   use ScrollWeb.JapiController,
-    index: true,
-    show: true,
-    create: {true, put_user_id?: true},
-    update: true,
-    delete: true,
+    index: [enable: true],
+    show: [enable: true],
+    create: [enable: true, put_user_id?: true],
+    update: [enable: true],
+    delete: [enable: true],
     struct: Posts.Post,
     module: Posts.Posts
 
@@ -16,23 +17,25 @@ defmodule ScrollWeb.PostController do
     sort: ~w(title inserted_at content),
     view: ScrollWeb.PostView
 
-  # @spec swagger_definitions :: map()
-  # def swagger_definitions do
-  #   %{
-  #     Post:
-  #       JsonApi.resource do
-  #         description("Post that has user")
+  @spec swagger_definitions :: map()
+  def swagger_definitions do
+    %{
+      PostResource:
+        JsonApi.resource do
+          description("Post")
 
-  #         attributes do
-  #           title(:string, "Post's title")
-  #           content(:string, "Post's content")
-  #           user_id(:string, "Post's author id")
-  #           updated_at(:string, "Last update timestamp UTC", format: "ISO-8601")
-  #           created_at(:string, "First created timestamp UTC")
-  #         end
+          attributes do
+            title(:string, "Post's title")
+            content(:string, "Post's content")
+            user_id(:string, "Post's author id")
+            updated_at(:string, "Update timestamp UTC", format: "ISO-8601")
+            created_at(:string, "Created timestamp UTC", format: "ISO-8601")
+          end
 
-  #         relationship(:user)
-  #       end
-  #   }
-  # end
+          relationship(:UserResource)
+        end,
+      Post: JsonApi.single(:PostResource),
+      Posts: JsonApi.page(:PostResource)
+    }
+  end
 end
